[gd_scene load_steps=6 format=2]

[ext_resource path="res://Drone03.png" type="Texture" id=1]
[ext_resource path="res://Drone01.jpg" type="Texture" id=2]
[ext_resource path="res://Drone02.png" type="Texture" id=3]
[ext_resource path="res://Drone04.jpg" type="Texture" id=4]
[ext_resource path="res://Node2D.gd" type="Script" id=5]

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="SpriteDrone1" type="Sprite" parent="."]
position = Vector2( 277.75, 172.125 )
scale = Vector2( 0.196215, 0.212781 )
texture = ExtResource( 2 )

[node name="SpriteDrone2" type="Sprite" parent="."]
position = Vector2( 274, 287 )
texture = ExtResource( 3 )

[node name="SpriteDrone3" type="Sprite" parent="."]
position = Vector2( 276.5, 391.375 )
scale = Vector2( 0.206967, 0.272305 )
texture = ExtResource( 1 )

[node name="SpriteDrone4" type="Sprite" parent="."]
position = Vector2( 272, 513 )
scale = Vector2( 0.196712, 0.253521 )
texture = ExtResource( 4 )
